# project-spy

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
cases/: courier.json  vienna.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: serve.rs
src-tauri/icons/: icon.af  icon.icns
src-tauri/src/: brains.rs  inference.rs  lib.rs  main.rs  server.rs
web/: README.md  index.html  package-lock.json  package.json  smoke.ts  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  styles.css  useGame.ts  useServerStatus.ts
web/src/components/: BrainSelect.tsx  EvidencePanel.tsx  StartupGate.tsx  StrainMeter.tsx  Transcript.tsx
web/src/engine/: cases.ts  engine.ts  llm.ts  prompts.ts  types.ts
