[package]
name = "project-spy"
version = "0.1.0"
description = "Project Spy — standalone interrogation game"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
llama-cpp-2 = { version = "0.1.146", features = ["metal"] }
encoding_rs = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
dirs = "5"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[profile.release]
opt-level = 3

[features]
custom-protocol = ["tauri/custom-protocol"]
